manager: fix evaluation of manager state

The state should be set to CONNECTED_GLOBAL only when there is full
connectivity.

Fixes: 9d43869e473b47542520c807dace93a6f9520964

https://bugzilla.gnome.org/show_bug.cgi?id=785281